[project]
name = "my-homework_3"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]

[tool.black]
line-length = 119
target-version = ['py313']
skip-string-normalization = true # Позволяем использовать разные кавычки

[tool.isort]
profile = "black" # Для работы в команде с black, чтобы друг друга не исправляли
line_length = 119

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
no_implicit_optional = true
warn_unused_ignores = true
show_error_codes = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "."



